turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:32: error: not found: value i
    com(rule(i))
             ^